--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,4 +2,9 @@
 - hosts: localhost
   remote_user: root
   roles:
-    - ansible-role-packages
+    - role: ansible-role-packages
+      packages:
+        - epel-release
+    - role: ansible-role-packages
+      packages:
+        - mg
